--- a/_includes/videoscript.html
+++ b/_includes/videoscript.html
@@ -4,9 +4,9 @@
         triggerOpen.click(function () {
             var theModal = $(this).data("bs-target"),
                 videoSRC = $(this).attr("data-tagVideo"),
-                videoSRCauto = videoSRC + "?autoplay=1";
+                videoSRCauto = videoSRC;
             $(theModal).modal('show');
-            $(theModal + ' iframe').attr('src', videoSRCauto);
+            $(theModal + ' video').attr('src', videoSRCauto);
             $(theModal + ' button.btn-close').click(function () {
                 $(theModal + ' iframe').attr('src', videoSRC);
                 $(theModal).modal('hide');
