--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
 <link rel="stylesheet" href="/css/offset-fixed-navbar.css">
+<link rel="stylesheet" href="/css/button_colors.css">
 <link rel="shortcut icon" href="/images/icon.ico" />
 <script type="text/javascript">
     function googleTranslateElementInit() {
