--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" href="/css/offset-fixed-navbar.css">
 <link rel="stylesheet" href="/css/button_colors.css">
 <link rel="shortcut icon" href="/images/icon.ico" />
+<script type="text/javascript" defer src="https://donorbox.org/install-popup-button.js"> </script>
+<script> window.DonorBox = { widgetLinkClassName: 'custom-dbox-popup' } </script>
 <script type="text/javascript">
     function googleTranslateElementInit() {
         new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
