--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Navigation from "./Navigation.astro";
 
 <header class="pb-20 md:pb-auto">
   <nav
-    class="fixed w-full h-16 bg-gray-800 flex justify-end text-center align-middle"
+    class="fixed w-full h-16 bg-gray-800 flex justify-end items-center text-center align-middle"
   >
     <Navigation />
   </nav>
